[SYNCOPE-1855] Allow for easier subclassing