@@ -157,8 +157,13 @@ abstract class AbstractJPAAnySearchDAO extends AbstractAnySearchDAO {
         return svs.field();
     }
 
+    protected String anyId(final SearchSupport.SearchView sv) {
+        return sv.alias() + ".any_id";
+    }
+
     protected String anyId(final SearchSupport svs) {
-        return defaultSV(svs).alias() + ".any_id";
+        return anyId(defaultSV(svs));
+
     }
 
     protected Optional<AnySearchNode> getQueryForCustomConds(
@@ -853,7 +858,7 @@ abstract class AbstractJPAAnySearchDAO extends AbstractAnySearchDAO {
                 join.append(" LEFT JOIN ").
                         append(sv.name()).append(" ").append(sv.alias()).
                         append(" ON ").
-                        append(joins.getFirst().alias()).append(".any_id=").append(sv.alias()).append(".any_id");
+                        append(anyId(joins.get(0))).append('=').append(anyId(sv));
             }
             fromString = join.toString();
         }
